--- a/spring-boot-simple/pom.xml
+++ b/spring-boot-simple/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.spring</groupId>
-	<artifactId>boot</artifactId>
+	<artifactId>spring-boot-simple</artifactId>
 	<name>spring-boot-simple</name>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 
