--- a/spring-boot-tomcat/pom.xml
+++ b/spring-boot-tomcat/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.demo</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>spring-boot-tomcat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
